--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@iconify/vue": "^4.1.2",
     "@vitejs/plugin-vue": "^5.0.4",
+    "sass": "^1.77.3",
+    "uid": "^2.0.2",
     "vite": "^5.2.8",
     "vite-plugin-vue-devtools": "^7.0.25"
   }
